5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1888_3139.log
== TEST (2019-07-09 16:14:58) 
-- CODE:
from numpy import*

vet = array(float(input("Digite o Vetor")))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:04) 
-- CODE:
from numpy import*

vet = array(float(input("Digite o Vetor: ")))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:34) 
-- CODE:
from numpy import*

vet = array(eval(float(input("Digite o Vetor: "))))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:03) 
-- CODE:
from numpy import*

vet = array(eval(float(input("Digite o Vetor: "))))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:03) 
-- CODE:
from numpy import*

vet = array(eval(float(input("Digite o Vetor: "))))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:03) 
-- CODE:
from numpy import*

vet = array(eval(float(input("Digite o Vetor: "))))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:46) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:15) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum([:-1]**exp)
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum([:-1]**exp)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum([ :-1]**exp)
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum([ :-1]**exp)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:35) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum([:-1])
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum([:-1])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum([:(-1)])
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum([:(-1)])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:14) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum([0:-1])
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum([0:-1])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:32) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet([0:-1]))
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 9
    sum(vet([0:-1]))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:46) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum([:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
File "XXXX", line 11
    m = ((sum([:-1]**exp))/n)**3
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:14) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:15) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:30) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:04) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m, 2)
-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:16) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2
-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:26:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2
-- EXECUTION TIME:
0.488263
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2
-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2
-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:23) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**exp))/n)**3

print(round(m), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:37) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:08) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:13) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in arange(vet):
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in arange(vet):
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:47) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:29) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(round(m),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:22) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:38) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	sum(vet[:-1])
	
m = ((sum(vet[:-1]**1/3))/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= vet[i]**1/3
	vt = size(v)
	
m = ((vt)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:42) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= (vet[i])**1/3
	vt = size(v)
	
m = ((vt)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= (vet[i])**1/3
	vt = size(v)
	
m = ((vt)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:10) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1]))/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:38) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1]))/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:32) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:50:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- EXECUTION TIME:
1.00284
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1.9867988338192408
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.7702546296296295
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.33329303703703705
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2)
-- ERROR:
File "XXXX", line 14
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:51:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- EXECUTION TIME:
0.921924
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.77
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:23) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= vet[i]**1/3
	
m = ((sum(v)/n)**3

print(round(m, 2))
-- ERROR:
File "XXXX", line 13
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= vet[i]**1/3
	
m = (sum(v)/n)**3)

print(round(m, 2))
-- ERROR:
File "XXXX", line 11
    m = (sum(v)/n)**3)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:33) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= vet[i]**1/3
	
m = (sum(v)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:47) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= vet[i]**1/3
	
m = (sum(v)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:59) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o Vetor: ")))

n = size(vet)
exp = 1/3

for i in vet:
	v= sum(vet[:-1])
	
m = ((sum(vet[:-1])**1/3)/n)**3

print(round(m, 2))
-- EXECUTION TIME:
0.908419
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
1.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.77
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
